# referral_system

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/referral_system/application/: errors.py
src/referral_system/application/interactors/: create_referral_code.py  delete_referral_code.py  read_info_about_referrals_by_creator_id.py  read_referral_code_by_creators_email.py
src/referral_system/application/interfaces/: identity_provider.py  referral_code_data_gateway.py  referral_code_id_generator.py  referral_code_title_generator.py  transaction_manager.py
src/referral_system/domain/: errors.py
src/referral_system/domain/entities/: referral_code.py  user.py
